--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Invest'Braz</title>
 		<link rel="icon" 
-              type="image/png" 
+              type="png" 
               href="icons/logo_144x144.png" />
 
 		<meta charset="utf-8" />
