--- a/contato.html
+++ b/contato.html
@@ -16,12 +16,20 @@
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
 
-				<!-- Header -->
+				<!-- Intro -->
 				<div id="intro">
+					<h1>Invest'Braz</h1>
+					<p>Realize seus investimentos com os melhores Traders do mercado.</p>
+					<ul class="actions">
+						<li><a href="#tupa" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+					</ul>
+				</div>
+
+				<!-- Header -->
 				<header id="header">
 					<a href="index.html" class="logo"><img src="icons/logo_512x512.png"/></a>
 				</header>
-				</div>
+
 
 				<!-- Nav -->
 					<nav id="nav">
