--- a/traders.html
+++ b/traders.html
@@ -16,12 +16,21 @@
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
 
+				<div id="intro">
+					<h1>Invest'Braz</h1>
+					<p>Realize seus investimentos com os melhores Traders do mercado.</p>
+					<ul class="actions">
+						<li><a href="#tupa" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+					</ul>
+				</div>
+
+
 				<!-- Header -->
-			    <div id="intro">
+			    
 				<header id="header">
 					<a href="index.html" class="logo"><img src="icons/logo_512x512.png"/></a>
 				</header>
-			    </div>
+			    
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
