--- a/index.html
+++ b/index.html
@@ -23,21 +23,14 @@
 					<div id="intro">
 						<h1>Invest'Braz</h1>
 						<p>Realize seus investimentos com os melhores Traders do mercado.</p>
-						<ul class="actions">
-							<li><a href="#tupa" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
 					</div>
-
-				<!-- Header -->
-					<header id="header">
-						<a href="index.html" class="logo"><img src="icons/logo_512x512.png"/></a>
-					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Nossos Serviços</a></li>
 							<li><a href="sobrenos.html">Sobre nós</a></li>
+							<li><a href="escritorios.html">Escritórios</a></li>
 							<li><a href="traders.html">traders</a></li>
 							<li><a href="contato.html">Contato</a></li>
 							
