--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<title>Invest'Braz</title>
-		<!-- <link rel="icon" 
+		<link rel="icon" 
               type="png" 
-              href="icons/logo_144x144.png" /> -->
+              href="icons/logo_144x144.png" />
 
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
