--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 					<div id="intro">
 						<h1>Invest'Braz</h1>
 						<p>Realize seus investimentos com os melhores Traders do mercado.</p>
+						<a><img src="icons/logo_144x144.png"></a>
+						
+						
 					</div>
 
 				<!-- Nav -->
